# JniDemo

./: .gitignore  build.gradle  gradle.properties  readme.txt  settings.gradle
JniBasic/: CMakeLists.txt  build.gradle
JniBasic/src/androidTest/java/com/jiage/demo/: ExampleInstrumentedTest.java
JniBasic/src/main/: AndroidManifest.xml
JniBasic/src/main/java/: com_jiage_demo_JNIUtil.h
JniBasic/src/main/java/com/jiage/demo/: JNIUtil.java  LogUtils.java  MainActivity.java  Person.java
JniBasic/src/main/jni/: 01_java_2_jni.cpp  02_jni_2_java.cpp  03_test_exception.cpp  04_reference.cpp  05_method_sync.cpp  06_pthread.cpp  com_jiage_demo_JNIUtil.h  common.h  xjni.c
JniBasic/src/main/res/layout/: activity_main.xml
JniBasic/src/main/res/values/: strings.xml
JniBasic/src/test/java/com/jiage/demo/: ExampleUnitTest.java
JniCCallJava/: CMakeLists.txt  build.gradle
JniDynamicRegister/: CMakeLists.txt  build.gradle
JniEncode/: CMakeLists.txt  build.gradle
JniEncode/src/androidTest/java/com/jiage/jniencode/: ExampleInstrumentedTest.java
JniEncode/src/main/: AndroidManifest.xml
JniEncode/src/main/java/: com_jiage_jniencode_CodeUtil.h
JniEncode/src/main/java/com/jiage/jniencode/: CodeUtil.java  MainActivity.java
JniEncode/src/main/jni/: code_util.c  com_jiage_jniencode_CodeUtil.h
JniEncode/src/main/res/layout/: activity_main.xml
JniEncode/src/main/res/values/: strings.xml
JniEncode/src/test/java/com/jiage/jniencode/: ExampleUnitTest.java
JniLoadSoDemo/: build.gradle
JniLogDemo/: CMakeLists.txt  build.gradle
JniNdkBuild/: CMakeLists.txt  build.gradle
doc/: readme.txt
(+58 files in other folders)
